--- a/nursing_home/src/ui_pkg/ui_pkg/monitoring.ui
+++ b/nursing_home/src/ui_pkg/ui_pkg/monitoring.ui
@@ -239,7 +239,7 @@
    <property name="title">
     <string/>
    </property>
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QTableWidget" name="task_queue">
     <property name="geometry">
      <rect>
       <x>360</x>
