--- a/nursing_home/src/ui_pkg/ui_pkg/monitoring.ui
+++ b/nursing_home/src/ui_pkg/ui_pkg/monitoring.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>Robot_Controller</class>
+ <widget class="QDialog" name="Robot_Controller">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1476</width>
-    <height>622</height>
+    <height>589</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
    <property name="geometry">
     <rect>
      <x>1418</x>
-     <y>50</y>
+     <y>20</y>
      <width>41</width>
      <height>25</height>
     </rect>
@@ -39,7 +39,7 @@
    <property name="geometry">
     <rect>
      <x>1380</x>
-     <y>50</y>
+     <y>20</y>
      <width>41</width>
      <height>25</height>
     </rect>
@@ -146,7 +146,7 @@
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>80</y>
+     <y>50</y>
      <width>621</width>
      <height>191</height>
     </rect>
@@ -231,9 +231,9 @@
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>310</y>
+     <y>322</y>
      <width>621</width>
-     <height>291</height>
+     <height>251</height>
     </rect>
    </property>
    <property name="title">
@@ -242,10 +242,10 @@
    <widget class="QTableWidget" name="task_queue">
     <property name="geometry">
      <rect>
-      <x>389</x>
-      <y>30</y>
-      <width>221</width>
-      <height>192</height>
+      <x>379</x>
+      <y>40</y>
+      <width>231</width>
+      <height>191</height>
      </rect>
     </property>
     <column>
@@ -262,8 +262,8 @@
    <widget class="QComboBox" name="task_combo">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>240</y>
+      <x>20</x>
+      <y>180</y>
       <width>91</width>
       <height>25</height>
      </rect>
@@ -272,61 +272,19 @@
    <widget class="QComboBox" name="location_combo">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>240</y>
+      <x>140</x>
+      <y>180</y>
       <width>91</width>
       <height>25</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="serve_btn">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>170</y>
-      <width>91</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>요청</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="normal_mode">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>230</y>
-      <width>89</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>일반 모드</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="serve_stop">
-    <property name="geometry">
-     <rect>
-      <x>490</x>
-      <y>240</y>
-      <width>91</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
-    </property>
-    <property name="text">
-     <string>Stop</string>
     </property>
    </widget>
    <widget class="QTableWidget" name="robot_table">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>325</width>
+      <x>12</x>
+      <y>40</y>
+      <width>355</width>
       <height>113</height>
      </rect>
     </property>
@@ -375,8 +333,8 @@
    <widget class="QPushButton" name="call_btn">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>240</y>
+      <x>260</x>
+      <y>180</y>
       <width>91</width>
       <height>25</height>
      </rect>
@@ -385,24 +343,11 @@
      <string>요청</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="serve_mode">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>160</y>
-      <width>89</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>배식 모드</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="queue_label">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>10</y>
+      <x>380</x>
+      <y>20</y>
       <width>91</width>
       <height>17</height>
      </rect>
@@ -412,50 +357,23 @@
     </property>
    </widget>
   </widget>
-  <widget class="QLabel" name="time_label">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>60</y>
-     <width>119</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QLabel" name="title_label">
-   <property name="geometry">
-    <rect>
-     <x>610</x>
-     <y>10</y>
-     <width>241</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>22</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <property name="text">
-    <string>Robot Controller</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="cctv_label">
    <property name="geometry">
     <rect>
      <x>1040</x>
-     <y>60</y>
+     <y>29</y>
      <width>181</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Ubuntu</family>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <italic>false</italic>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
     <string>CCTV 🟢</string>
@@ -465,7 +383,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>80</y>
+     <y>50</y>
      <width>391</width>
      <height>524</height>
     </rect>
@@ -473,7 +391,7 @@
    <property name="title">
     <string/>
    </property>
-   <widget class="QLabel" name="map_label">
+   <widget class="QLabel" name="map">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -502,9 +420,9 @@
    <property name="geometry">
     <rect>
      <x>1040</x>
-     <y>80</y>
+     <y>50</y>
      <width>421</width>
-     <height>524</height>
+     <height>521</height>
     </rect>
    </property>
    <property name="title">
@@ -517,9 +435,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>15</y>
+      <y>30</y>
       <width>400</width>
-      <height>498</height>
+      <height>480</height>
      </rect>
     </property>
     <property name="font">
@@ -534,20 +452,34 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="time_label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>7</y>
+      <width>119</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QLabel" name="view_label">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>60</y>
+     <x>412</x>
+     <y>29</y>
      <width>181</width>
      <height>20</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <weight>50</weight>
-     <bold>false</bold>
+     <pointsize>15</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
    <property name="text">
@@ -557,27 +489,53 @@
   <widget class="QLabel" name="task_label">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>290</y>
+     <x>412</x>
+     <y>300</y>
      <width>181</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
    <property name="text">
     <string>Robot Task</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="map_label">
+   <property name="geometry">
+    <rect>
+     <x>15</x>
+     <y>29</y>
+     <width>61</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Map</string>
    </property>
   </widget>
   <zorder>cam_group</zorder>
   <zorder>white_btn</zorder>
   <zorder>dark_btn</zorder>
   <zorder>request_group</zorder>
-  <zorder>time_label</zorder>
-  <zorder>title_label</zorder>
   <zorder>cctv_label</zorder>
   <zorder>map_group</zorder>
   <zorder>cctv_group</zorder>
   <zorder>view_label</zorder>
   <zorder>task_label</zorder>
+  <zorder>map_label</zorder>
  </widget>
  <resources/>
  <connections/>
