--- a/nursing_home/src/ui_pkg/ui_pkg/monitoring.ui
+++ b/nursing_home/src/ui_pkg/ui_pkg/monitoring.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1476</width>
-    <height>589</height>
+    <height>584</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -233,7 +233,7 @@
      <x>410</x>
      <y>322</y>
      <width>621</width>
-     <height>251</height>
+     <height>252</height>
     </rect>
    </property>
    <property name="title">
@@ -415,6 +415,97 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>326</x>
+      <y>474</y>
+      <width>51</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>데스크</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>105</x>
+      <y>320</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>다용도실</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>50</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>1 - A</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>180</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>1 - B</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>307</x>
+      <y>240</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>배식대</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>50</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>2 - B</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>180</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>2 - A</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="cctv_group">
    <property name="geometry">
@@ -422,7 +513,7 @@
      <x>1040</x>
      <y>50</y>
      <width>421</width>
-     <height>521</height>
+     <height>524</height>
     </rect>
    </property>
    <property name="title">
