--- a/nursing_home/src/ui_pkg/ui_pkg/following.ui
+++ b/nursing_home/src/ui_pkg/ui_pkg/following.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>501</width>
-    <height>411</height>
+    <height>450</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -49,6 +49,35 @@
    </property>
    <property name="text">
     <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="capture_btn">
+   <property name="geometry">
+    <rect>
+     <x>368</x>
+     <y>410</y>
+     <width>121</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>capture person</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="capture_label">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>415</y>
+     <width>91</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="layoutDirection">
+    <enum>Qt::RightToLeft</enum>
+   </property>
+   <property name="text">
+    <string>Capturing</string>
    </property>
   </widget>
  </widget>
